--- a/css/styles.css
+++ b/css/styles.css
@@ -290,3 +290,70 @@ address>a{
     padding-top: 60px;
     padding-left: 215px;
 }
+main {
+    width: 1240px;
+    height: 1360px;
+    background-color: #EEEEEE;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    margin:auto;
+    margin-top: 94px;
+    margin-bottom: 94px;
+}
+.buttons {
+width: 575px;
+height: 54px;
+display: flex;
+justify-content: space-between;
+}
+.buttons li>a{
+    background-color: #F5F4FA;
+    border-radius: 4px;
+    border: 0;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 26px;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+padding:5px 22px 5px 22px;
+}
+.buttons li>a:hover {
+    background-color: #2196F3;
+}
+.projects {
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+}
+.projects>li {
+    width: 370px;
+    height: 404px;
+    background-color:#FFFFFF;
+    margin: 15px;
+}
+.projects li>h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: #212121;
+    margin: 0;
+    margin-left: 15px;
+}
+.projects li>p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: #757575;
+    margin-left:15px;
+}
