--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,7 @@ padding:5px 22px 5px 22px;
     background-color:#FFFFFF;
     margin: 15px; 
     border-bottom: 1px;
-    border-color: #EEEEEE;
+    border-color: #757575;
 }
 .projects li>h3 {
     font-family: 'Roboto';
