--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-html,
 body {
     background-color: #ECECEC;
     margin:0;
@@ -6,21 +5,17 @@ body {
     font-family: 'Roboto';
     color: #212121;
 }
-ul { 
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 115%;
-letter-spacing: 0.02em;
-color: #212198;
-}
 a {
     text-decoration: none;
 }
-header a:hover {
+.head-li {
+    color: #757575;
+}
+.head-li:hover {
     color: #2196F3;
 }
-header {
+
+.header {
     background-color: #ECECEC;
     display:flex;
     width: 1600px;
@@ -33,7 +28,7 @@ header {
     line-height: 16px;
     letter-spacing: 0.02em;
 }
-header img {
+.header img {
 object-fit: contain;
 margin-left: 215px;
 }
@@ -51,9 +46,6 @@ list-style-type: none;
     padding-left: 50px;
     padding-right: 50px;
     width: 281px;
-    color: #212121;
-}
-header a{
     color: #212121;
 }
 .mail {
@@ -220,7 +212,7 @@ color: #757575;
     padding-bottom:102px;
     margin: 0;
 }
-footer {
+.footer {
 height: 252px;
 background-color:#2F303A;
 flex-direction: column;
@@ -230,7 +222,7 @@ align-items: flex-start;
 .logo-footer {
 object-fit: contain;
 }
-address {
+.address {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -241,9 +233,9 @@ address {
     flex-direction: column;
     width: 231px;
     height: 81px;
-    margin-left: 215px;
+    margin-left: 170px;
 }
-address h4{
+.street{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -252,7 +244,7 @@ address h4{
     color: #FFFFFF;
     margin: 0;
 }
-address a{
+.address a{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -271,7 +263,7 @@ address a{
     padding-top: 60px;
     padding-left: 215px;
 }
-.services {
+.main {
     width: 1240px;
     height: 1360px;
     background-color: #EEEEEE;
@@ -288,22 +280,25 @@ height: 54px;
 display: flex;
 justify-content: space-between;
 }
-.sorting {
+.sorting-button {
     background-color: #F5F4FA;
     border-radius: 4px;
     border: 0;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 162%;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
 padding:5px 22px 5px 22px;
+cursor: pointer;
 }
-.buttons li>a:hover {
+.sorting-button:hover {
     background-color: #2196F3;
     color: #FFFFFF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .projects {
     flex-direction: row;
@@ -370,4 +365,7 @@ padding-left: 215px;
 }
 .logo-webstudio-2 span{
     color:#2196F3;
+}
+.infor {
+    width: 231px;
 }
