--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,17 @@ a {
 .head-li:hover {
     color: #2196F3;
 }
+.container {
+    width: 1200px;
+    margin: auto;
+align-items: center;
+    display: flex;
 
+}
 .header {
     background-color: #ECECEC;
     display:flex;
-    width: 1600px;
+    width: 100%;
     height: 80px;
     align-items: center;
     justify-content: space-between;
@@ -43,17 +49,15 @@ list-style-type: none;
 .navig {
     display: flex;
     justify-content: space-around;
-    padding-left: 50px;
-    padding-right: 50px;
     width: 281px;
     color: #212121;
 }
 .mail {
-    padding: 0px 0px 0px 600px;
+    margin: 0px 0px 0px 600px;
     display: flex;
 }
 .tel {
-    padding:0px 215px 0px 50px;
+    margin:0px 215px 0px 50px;
     display: flex;
 }
 .main-button {
@@ -65,7 +69,7 @@ list-style-type: none;
     flex-direction: column;
     width: 100%;
 }
-.main-button button {
+.container-button button {
     border-radius: 4px;
     background-color:#2196F3;
     width: 216px;
@@ -81,8 +85,7 @@ list-style-type: none;
     justify-content: center;
     cursor: pointer;
 }
-.main-button h1 {
-font-style: normal;
+.container-button h1 {
 font-weight: 900;
 font-size: 44px;
 line-height: 60px;
@@ -164,6 +167,7 @@ color: #757575;
     justify-content:space-between;
     padding-top:50px;
     width: inherit;
+    padding-left: 0;
 }
 .comand {
 height: 648px;
@@ -172,7 +176,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 }
-.comand h2 {
+.container-comand h2 {
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
@@ -180,7 +184,8 @@ line-height: 117%;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
-padding-top: 94px;
+margin: 0;
+padding-bottom:50px ;
 }
 .photo-comand h3{
 font-style: normal;
@@ -211,6 +216,7 @@ color: #757575;
     justify-content: space-between;
     padding-bottom:102px;
     margin: 0;
+    padding-left: 0;
 }
 .footer {
 height: 252px;
@@ -233,7 +239,10 @@ object-fit: contain;
     flex-direction: column;
     width: 231px;
     height: 81px;
-    margin-left: 170px;
+    padding-left: 0;
+}
+.list-address {
+    padding-left: 0;
 }
 .street{
     font-style: normal;
@@ -279,6 +288,9 @@ width: 575px;
 height: 54px;
 display: flex;
 justify-content: space-between;
+margin: auto;
+padding: 0;
+
 }
 .sorting-button {
     background-color: #F5F4FA;
@@ -288,11 +300,11 @@ justify-content: space-between;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 162%;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-padding:5px 22px 5px 22px;
+    padding:6px 22px 6px 22px;
 cursor: pointer;
 }
 .sorting-button:hover {
@@ -304,13 +316,14 @@ cursor: pointer;
     flex-direction: row;
     justify-content: space-between;
     display: flex;
+    margin: 0;
     flex-wrap: wrap;
 }
 .projects li{
     width: 370px;
     height: 404px;
     background-color:#FFFFFF;
-    margin: 15px; 
+    margin-bottom: 30px;
     border-bottom: 1px;
     border-color: #757575;
 }
@@ -343,7 +356,7 @@ letter-spacing: 0.03em;
 color: #000000;
 width: 145px;
 height: 31px;
-padding-left: 215px;
+
 }
 .logo-webstudio span{
     color: #2196F3;
@@ -358,8 +371,6 @@ padding-left: 215px;
     color: #FFFFFF;
     width: 145px;
     height: 31px;
-    padding-left: 215px;
-    padding-left: 215px;
     margin-top: 60px;
     margin-bottom: 20px;
 }
@@ -368,4 +379,31 @@ padding-left: 215px;
 }
 .infor {
     width: 231px;
+}
+.container-projects {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+.container-footer {
+    width: 1200px;
+    margin: auto;
+}
+.container-button {
+    width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container-we-doing {
+    width: 1200px;
+    margin: auto;
+}
+.container-comand {
+    width: 1200px;
+    margin: auto;
+    flex-direction: column;
+    display: flex;
 }
