--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,13 @@ body {
     padding:0;
     font-family: 'Roboto';
     color: #212121;
+    width: 100%;
 }
 a {
     text-decoration: none;
 }
 .head-li {
-    color: #757575;
+    color: #212121;
 }
 .head-li:hover {
     color: #2196F3;
@@ -19,7 +20,10 @@ a {
     margin: auto;
 align-items: center;
     display: flex;
-
+}
+section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 .header {
     background-color: #ECECEC;
@@ -51,14 +55,15 @@ list-style-type: none;
     justify-content: space-around;
     width: 281px;
     color: #212121;
+    margin-left: 93px;
 }
 .mail {
-    margin: 0px 0px 0px 600px;
     display: flex;
+    padding-left: 344px;
 }
 .tel {
-    margin:0px 215px 0px 50px;
     display: flex;
+    padding-left: 50px;
 }
 .main-button {
     display: flex;
@@ -86,20 +91,22 @@ list-style-type: none;
     cursor: pointer;
 }
 .container-button h1 {
+    font-family: 'Roboto';
+font-style: normal;
 font-weight: 900;
 font-size: 44px;
-line-height: 60px;
+line-height: 136%;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: #FFFFFF;
 }
 .cont-about {
-height: 760px;
 display: flex;
 align-items: center;
 flex-direction: column;
 width: 100%;
+padding-bottom: 94px;
 }
 .about {
     display: flex;
@@ -116,7 +123,8 @@ width: 100%;
     flex-direction: row;
     align-items:flex-start;
     justify-content: space-evenly;
-    margin-top: 100px;
+    padding: 0;
+    margin-bottom: 94px;
 }
 .soft li{
 display: flex;
@@ -149,8 +157,6 @@ color: #757575;
     height: 386px;
     flex-direction: column;
     margin-top:94px;
-    padding-bottom: 90px;
- 
 }
 .we-doing h2 {
     font-style: normal;
@@ -168,6 +174,7 @@ color: #757575;
     padding-top:50px;
     width: inherit;
     padding-left: 0;
+    margin: 0;
 }
 .comand {
 height: 648px;
@@ -253,6 +260,7 @@ object-fit: contain;
     color: #FFFFFF;
     margin: 0;
 }
+
 .address a{
     font-style: normal;
     font-weight: 400;
@@ -273,15 +281,11 @@ object-fit: contain;
     padding-left: 215px;
 }
 .main {
-    width: 1240px;
-    height: 1360px;
+    width: 100%;
     background-color: #EEEEEE;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
     margin:auto;
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 .buttons {
 width: 575px;
