--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ECECEC;
+    background-color: #FFFFFF;
     margin:0;
     padding:0;
     font-family: 'Roboto';
@@ -26,7 +26,7 @@ section {
     padding-bottom: 94px;
 }
 .header {
-    background-color: #ECECEC;
+    background-color: #FFFFFF;
     display:flex;
     width: 100%;
     height: 80px;
@@ -37,6 +37,7 @@ section {
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
+    border-bottom: solid 1px #ECECEC;
 }
 .header img {
 object-fit: contain;
@@ -44,26 +45,32 @@ margin-left: 215px;
 }
 ul{
 list-style-type: none;
+margin: 0;
 }
 .links {
     display: flex;
     align-items: center;
     justify-content:center;
+    margin-left: 344px;
+    padding: 0;
+}
+.nav {
+    width: 281px;
+    margin-left: 93px;
+    padding: 0;
 }
 .navig {
     display: flex;
     justify-content: space-around;
-    width: 281px;
     color: #212121;
-    margin-left: 93px;
+    padding: 0;
 }
 .mail {
     display: flex;
-    padding-left: 344px;
 }
 .tel {
     display: flex;
-    padding-left: 50px;
+    margin-left: 50px;
 }
 .main-button {
     display: flex;
@@ -100,6 +107,7 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: #FFFFFF;
+margin-top: 0;
 }
 .cont-about {
 display: flex;
@@ -131,16 +139,18 @@ display: flex;
 flex-direction: column;
 justify-content: space-between;
 }
-.soft h3 {
-    margin: 0;
+.about-soft-li h3{
+    padding: 0;
 font-style: normal;
 font-weight: 700;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-padding-bottom: 10px;
+margin-bottom: 10px;
+margin-top: 0;
 color: #212121;
+
 }
 .soft p {
     margin: 0;
@@ -156,7 +166,7 @@ color: #757575;
     width: 1170px;
     height: 386px;
     flex-direction: column;
-    margin-top:94px;
+    margin:0;
 }
 .we-doing h2 {
     font-style: normal;
@@ -167,11 +177,11 @@ color: #757575;
     letter-spacing: 0.03em;
     color: #212121;
     margin: 0;
+    margin-bottom:50px;
 }
 .imgtechno {
     display: flex;
     justify-content:space-between;
-    padding-top:50px;
     width: inherit;
     padding-left: 0;
     margin: 0;
@@ -192,7 +202,7 @@ text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
 margin: 0;
-padding-bottom:50px ;
+margin-bottom:50px ;
 }
 .photo-comand h3{
 font-style: normal;
@@ -217,11 +227,8 @@ color: #757575;
     background-color:#FFFFFF;
 }
 .photo-comand {
-    width: 1170px;
-    height: 378px;
     display: flex;
     justify-content: space-between;
-    padding-bottom:102px;
     margin: 0;
     padding-left: 0;
 }
@@ -261,7 +268,7 @@ object-fit: contain;
     margin: 0;
 }
 
-.address a{
+.street{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -269,6 +276,13 @@ object-fit: contain;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     padding: 8px;
+}
+.map-ua {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
 }
 .cardt{
     width: 270px;
@@ -282,7 +296,7 @@ object-fit: contain;
 }
 .main {
     width: 100%;
-    background-color: #EEEEEE;
+    background-color: #FFFFFF;
     margin:auto;
     padding-top: 94px;
     padding-bottom: 94px;
@@ -322,14 +336,14 @@ cursor: pointer;
     display: flex;
     margin: 0;
     flex-wrap: wrap;
+    padding: 0;
 }
 .projects li{
     width: 370px;
     height: 404px;
     background-color:#FFFFFF;
     margin-bottom: 30px;
-    border-bottom: 1px;
-    border-color: #757575;
+    border-bottom: solid 1px #EEEEEE;
 }
 .name {
     font-style: normal;
@@ -410,4 +424,11 @@ height: 31px;
     margin: auto;
     flex-direction: column;
     display: flex;
+}
+.individual-non-toppadding {
+    padding-top: 0;
+    padding-bottom: 94px;
+}
+.not-botpadding {
+    padding-bottom: 0;
 }
