--- a/css/styles.css
+++ b/css/styles.css
@@ -6,20 +6,60 @@ body {
     color: #212121;
     width: 100%;
 }
+h1 {
+    margin: 0;
+}
+h2 {
+        margin: 0;
+    }
+h3 {
+    margin: 0;
+}
+h4 {
+    margin: 0;
+}
+h5 {
+    margin: 0;
+}
+p {
+    margin: 0;
+}
+li {
+    margin: 0;
+}
 a {
     text-decoration: none;
 }
 .head-li {
     color: #212121;
 }
-.head-li:hover {
+.links-hf:hover {
     color: #2196F3;
+}
+.links-hf:focus {
+    color: #2196F3;
+}
+.button-hf:hover {
+    background-color: #2196F3;
+    color: #FFFFFF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.button-hf:focus {    
+    background-color: #2196F3;
+    color: #FFFFFF;
 }
 .container {
     width: 1200px;
     margin: auto;
 align-items: center;
     display: flex;
+}
+.container-header {
+    width: 1200px;
+    margin:0 auto;
+align-items: center;
+    display: flex;
+    padding: 0 15px;
 }
 section {
     padding-top: 94px;
@@ -67,10 +107,12 @@ margin: 0;
 }
 .mail {
     display: flex;
+    color: #757575;
 }
 .tel {
     display: flex;
     margin-left: 50px;
+    color: #757575;
 }
 .main-button {
     display: flex;
@@ -80,6 +122,8 @@ margin: 0;
     background-color: #2F303A;
     flex-direction: column;
     width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 .container-button button {
     border-radius: 4px;
@@ -114,7 +158,6 @@ display: flex;
 align-items: center;
 flex-direction: column;
 width: 100%;
-padding-bottom: 94px;
 }
 .about {
     display: flex;
@@ -138,6 +181,7 @@ padding-bottom: 94px;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
+width: 270px;
 }
 .about-soft-li h3{
     padding: 0;
@@ -181,10 +225,10 @@ color: #757575;
 }
 .imgtechno {
     display: flex;
-    justify-content:space-between;
     width: inherit;
     padding-left: 0;
     margin: 0;
+    gap: 30px;
 }
 .comand {
 height: 648px;
@@ -223,14 +267,13 @@ color: #757575;
 }
 .photo-comand li{
     width: 270px;
-    height: 386px;
     background-color:#FFFFFF;
 }
 .photo-comand {
     display: flex;
-    justify-content: space-between;
     margin: 0;
     padding-left: 0;
+    gap: 30px;
 }
 .footer {
 height: 252px;
@@ -264,18 +307,7 @@ object-fit: contain;
     font-size: 14px;
     line-height: 171%;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
-    margin: 0;
-}
-
-.street{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 171%;
-    letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    padding: 8px;
 }
 .map-ua {
     font-weight: 400;
@@ -303,11 +335,11 @@ object-fit: contain;
 }
 .buttons {
 width: 575px;
-height: 54px;
 display: flex;
 justify-content: space-between;
 margin: auto;
 padding: 0;
+margin-bottom:50px;
 
 }
 .sorting-button {
@@ -325,14 +357,9 @@ padding: 0;
     padding:6px 22px 6px 22px;
 cursor: pointer;
 }
-.sorting-button:hover {
-    background-color: #2196F3;
-    color: #FFFFFF;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
 .projects {
     flex-direction: row;
-    justify-content: space-between;
+  gap: 30px;
     display: flex;
     margin: 0;
     flex-wrap: wrap;
@@ -340,13 +367,12 @@ cursor: pointer;
 }
 .projects li{
     width: 370px;
-    height: 404px;
     background-color:#FFFFFF;
-    margin-bottom: 30px;
-    border-bottom: solid 1px #EEEEEE;
+    border-bottom:solid 1px #EEEEEE;
+    border-left: solid 1px #EEEEEE;
+    border-right: solid 1px #EEEEEE;
 }
 .name {
-    font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 200%;
@@ -402,7 +428,7 @@ height: 31px;
     width: 1200px;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin:0 auto;
 }
 .container-footer {
     width: 1200px;
@@ -410,14 +436,16 @@ height: 31px;
 }
 .container-button {
     width: 1200px;
-    margin: auto;
+    margin:0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 200px 0;
 }
 .container-we-doing {
     width: 1200px;
-    margin: auto;
+    margin:0 auto;
+    padding: 0 15px;
 }
 .container-comand {
     width: 1200px;
@@ -425,10 +453,17 @@ height: 31px;
     flex-direction: column;
     display: flex;
 }
-.individual-non-toppadding {
-    padding-top: 0;
-    padding-bottom: 94px;
+.harakter {
+    padding: 30px 32px;
 }
-.not-botpadding {
-    padding-bottom: 0;
+.harakter h3 {
+    margin-bottom:10px ;
+}
+.direction-img {
+    padding: 20px 24px;
+}
+.direction-img h2 {
+    margin: 0;
+} .direction-img p {
+margin: 0;
 }
