--- a/css/styles.css
+++ b/css/styles.css
@@ -421,11 +421,6 @@ height: 31px;
     margin:0 auto;
     padding: 0 15px;
 }
-.container-footer {
-    width: 1200px;
-    margin:0 auto;
-    padding:0 15px;
-}
 .container-button {
     width: 1200px;
     margin:0 auto;
@@ -565,4 +560,53 @@ justify-content: center;
 }
 .li-svg-costumers:hover {
     border-color: #2196F3;
+}
+.cont-footer-svg {
+    display: flex;
+    flex-direction: row;
+    width: 206px;
+    height: 44px;
+    gap: 10px;
+    padding: 0;
+}
+.barbers-soc-link-footer {
+    width: 100%;
+    height: 100%;
+    background-color: #55565E;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contacts-soc-item-footer {
+    width: 44px;
+    height: 44px;
+}
+.svg-footer-link {
+    fill: #FFFFFF;
+}
+.barbers-soc-link-footer:hover {
+    background-color: #2196F3;
+}
+.footer-svg-social h4{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+.footer-svg-social {
+    width: 206px;
+    margin-top: 15px;
+    margin-left: 70px;
+}
+.container-wrap-footer {
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    margin: 0 auto;
 }
