--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ a {
     margin: auto;
 }
 .wrap-footer {
-    align-items: center;
+    align-items: baseline;
     display: flex;
 }
 .header-cont-center{
@@ -130,7 +130,7 @@ padding: 0;
     justify-content: center;
     align-items: center;
     background-color: rgba(47, 48, 58, 0.4);
-    background-image: url("/images/Img-background.png");
+    background-image: url("../images/Img-background.png");
     background-repeat: no-repeat;
     background-size: cover;
     flex-direction: column;
@@ -155,6 +155,7 @@ padding: 0;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    letter-spacing: 0.06em
 }
 .main-cont-button h1 {
     font-family: 'Roboto';
@@ -313,6 +314,7 @@ object-fit: contain;
     color: #FFFFFF;
 }
 .cardt{
+    display: block;
     max-width: 100%;
     height: auto;
 }
@@ -361,7 +363,8 @@ cursor: pointer;
     padding: 0;
 }
 .comand-li {
-    background-color:#FFFFFF;
+    border-radius: 3px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .projects li>img {
     width:100% ;
@@ -375,6 +378,7 @@ cursor: pointer;
     line-height: 200%;
     letter-spacing: 0.06em;
     color: #212121;
+    margin-bottom: 4px;
 }
 .description {
     font-style: normal;
@@ -414,9 +418,6 @@ height: 31px;
 .logo-webstudio-2 span{
     color:#2196F3;
 }
-.infor {
-    width: 231px;
-}
 .container-projects {
     width: 1200px;
     margin:0 auto;
@@ -428,7 +429,9 @@ height: 31px;
     padding: 0 15px;
 }
 .harakter {
-    margin: 30px 0 30px 0;
+    padding: 30px 0 30px 0;
+    background-color:#FFFFFF;
+    border-radius: 4px;
 }
 .harakter h3 {
     margin-bottom:10px ;
@@ -443,6 +446,9 @@ height: 31px;
     margin: 0;
 } .direction-img p {
 margin: 0;
+}
+.infor:not(:last-child) {
+    margin-bottom: 9px;
 }
 .box-img {
     width: 100%;
@@ -469,7 +475,7 @@ margin: 0;
 justify-content: center;
     display: flex;
     gap: 10px;
-padding-top: 16px;
+margin-top: 16px;
 }
 .barbers-soc-link:hover {
     background-color: #2196F3
