--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,8 @@ a {
 }
 .container {
     width: 1200px;
-    margin: auto;
+    margin:0 auto;
+    padding: 0 15px;
 }
 .wrap-footer {
     align-items: baseline;
@@ -241,17 +242,6 @@ color: #757575;
 .comand {
 background: #F5F4FA;
 }
-.container h2 {
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 117%;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-margin: 0;
-margin-bottom:50px ;
-}
 .photo-comand h3{
 font-style: normal;
 font-weight: 500;
@@ -418,16 +408,6 @@ height: 31px;
 .logo-webstudio-2 span{
     color:#2196F3;
 }
-.container-projects {
-    width: 1200px;
-    margin:0 auto;
-    padding: 0 15px;
-}
-.container-comand {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
 .harakter {
     padding: 30px 0 30px 0;
     background-color:#FFFFFF;
@@ -449,6 +429,16 @@ margin: 0;
 }
 .infor:not(:last-child) {
     margin-bottom: 9px;
+}
+.all-team {
+    font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+margin-bottom: 50px
 }
 .box-img {
     width: 100%;
