--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ padding: 0;
     justify-content: center;
     align-items: center;
     background-color: rgba(47, 48, 58, 0.4);
-    background-image: url("../images/Шапка.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url("../images/Шапка.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     flex-direction: column;
