--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,8 @@ a {
     color: #212121;
 }
 .links-hf {
+    padding: 32px 0;
+    position: relative;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,12 +49,16 @@ a {
 .current {
     color: #2196F3;
 }
-.current:after {
+.current::after {
     content: '';
-    background-color: #2196F3;
-    border-radius: 2px;
-    width: 48px;
+    display: block;
+    width: 100%;
     height: 4px;
+    background: #2196F3;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 .links-hf:active {
     color: #2196F3;
