--- a/css/styles.css
+++ b/css/styles.css
@@ -684,3 +684,30 @@ padding: 63px 24px 63px 24px;
     text-transform: uppercase;
     color: #FFFFFF;
 }
+.modal-background {
+    height: 100%;
+    width: 100%;
+    background:rgba(0, 0, 0, 0.2);
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-window {
+    z-index: -1;
+    background-color: #FFFFFF;
+    width: 528px;
+    height: 581px;
+    position: relative;
+    border-radius: 4px;
+}
+.cross {
+    position: absolute;
+top: 8px;
+right: 8px;
+}
+.is-hidden {
+    visibility: 0;
+    opacity: 0;
+    pointer-events: all;
+}
