--- a/css/styles.css
+++ b/css/styles.css
@@ -684,30 +684,47 @@ padding: 63px 24px 63px 24px;
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.modal-background {
-    height: 100%;
-    width: 100%;
-    background:rgba(0, 0, 0, 0.2);
+.backdrop {
     position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    opacity: 1;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-window {
-    z-index: -1;
-    background-color: #FFFFFF;
+.modal-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    background-color:#FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-}
-.cross {
-    position: absolute;
-top: 8px;
-right: 8px;
-}
+  }
 .is-hidden {
-    visibility: 0;
     opacity: 0;
-    pointer-events: all;
+    pointer-events: none;
+}
+.close-btn-icon {
+    position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
