--- a/css/styles.css
+++ b/css/styles.css
@@ -709,6 +709,7 @@ padding: 63px 24px 63px 24px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    align-items: flex-start;
   }
 .is-hidden {
     opacity: 0;
@@ -727,4 +728,30 @@ padding: 63px 24px 63px 24px;
   background-color: var(--secondary-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+.modal-form p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+.modal-form h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin: 0 auto;
+    margin-bottom: 12px;
+}
+.labels {
+    margin-bottom: 10px;
+    width: 448px;
+    height: 40px;
+    border-radius: 4px;
+
 }
