--- a/css/styles.css
+++ b/css/styles.css
@@ -737,6 +737,7 @@ padding: 63px 24px 63px 24px;
     line-height: 14px;
     letter-spacing: 0.01em;
     color: #757575;
+    margin-bottom: 4px;
 }
 .modal-form h3 {
     font-style: normal;
@@ -749,26 +750,16 @@ padding: 63px 24px 63px 24px;
     margin: 0 auto;
     margin-bottom: 12px;
 }
-:focus {
-    outline: 0;
-    outline-offset: 0;
-}
 .close-btn-icon:hover .cross-btn {
     fill: #2196F3;
-}
-.close-btn-icon:focus{
-    border-color: #2196F3;
 }
 .close-btn-icon:focus .cross-btn {
 fill: #2196F3;
 }
-.close-btn-icon:hover {
-    border-color: #2196F3;
-}
 .cross-btn {
     transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.labels {
+.label-input {
     border-radius: 4px;
     border:1px solid rgba(33, 33, 33, 0.2);
     margin-bottom: 0;
@@ -778,20 +769,17 @@ fill: #2196F3;
     height: 40px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.person-icon {
+.icon-form {
     position: absolute;
     left: 12px;
     top: 11px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #212121;
 }
 .comments-area {
     width: 448px;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-}
-.comments-area:hover {
-    border-color: #2196F3;
 }
 .comments-area:focus {
     outline: 0;
@@ -801,17 +789,10 @@ fill: #2196F3;
 .cont-form-label {
     position: relative;
     margin-bottom: 10px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cont-form-label:hover .person-icon {
-    fill:#2196F3;
-}
-.labels:focus .person-icon {
-    fill:#2196F3;
-}
-.cont-form-label:hover .labels {
-    border:1px solid#2196F3;
-}
-.cont-form-label:focus .labels {
-    border:1px solid#2196F3;
+.label-input:focus,.label-input:focus.icon-form{
+    border-color: #2196F3;
+    fill: #2196F3;
+    outline: 0;
+    outline-offset: 0;
 }
