--- a/css/styles.css
+++ b/css/styles.css
@@ -786,13 +786,56 @@ fill: #2196F3;
     outline-offset: 0;
     border-color: #2196F3;
 }
+:focus::-webkit-input-placeholder{
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .cont-form-label {
     position: relative;
     margin-bottom: 10px;
 }
-.label-input:focus,.label-input:focus.icon-form{
+.label-input:focus{
     border-color: #2196F3;
-    fill: #2196F3;
     outline: 0;
     outline-offset: 0;
+}
+.label-input:focus+.icon-form {
+    fill: #2196F3;
+}
+.accept-list {
+    display: flex;
+    align-items: center;
+    margin-left: 13px;
+    margin-top: 20px;
+}
+.link-accept {
+    color: #2196F3;
+   text-decoration: underline;
+}
+.accept-list p {
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: #757575;
+}
+.yes-value {
+ width: 16px;
+ height: 15px;   
+ margin-right: 7px;
+}
+.form-button-accept {
+    background-color:#188CE8 ;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0 auto;
+    border: 0;
+    border-radius: 4px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+.form-button-accept:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
